<resources>
    <string name="app_name">Calculator</string>
    <string name="_0">0</string>
    <string name="_dot">.</string>
    <string name="_equals">=</string>
    <string name="_plus">+</string>
    <string name="_minus">-</string>
    <string name="_x">x</string>
    <string name="_division">÷</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_c">C</string>
    <string name="_backarrow">←</string>
    <string name="_error">ERROR</string>
    <string name="basic_calculator">Basic Calculator</string>
    <string name="advanced_calculator">Advanced Calculator</string>
    <string name="about">About</string>
    <string name="sin">sin</string>
    <string name="sqrt">√</string>
    <string name="cos">cos</string>
    <string name="x_squared">^2</string>
    <string name="tan">tan</string>
    <string name="x_power_y">^</string>
    <string name="ln">ln</string>
    <string name="log">log</string>
    <string name="plus_minus">±</string>
    <string name="exit">exit</string>
    <string name="description">Calculator App\nMade by Kacper Dębek\n\nCalculator provides simple and advanced mathematical functions.\n • Perform basic calculations such as addition, subtraction, multiplication, and division\n • Do scientific operations such as trigonometric and logarithmic functions</string>
    <string name="percent">%</string>
</resources>
