<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@id/myrootlayout"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:text="@string/_1"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_0"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginBottom="44dp"
        android:text="@string/_0"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/onScreenValueView"
        android:layout_width="317dp"
        android:layout_height="75dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:freezesText="true"
        android:gravity="end"
        android:textAlignment="textEnd"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088" />

    <Button
        android:id="@+id/button_equals"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="44dp"
        android:text="@string/_equals"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_dot" />

    <Button
        android:id="@+id/button_dot"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="44dp"
        android:text="@string/_dot"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_0" />

    <Button
        android:id="@+id/button_plus"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:layout_marginBottom="44dp"
        android:text="@string/_plus"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button_equals" />

    <Button
        android:id="@+id/button_x"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:text="@string/_x"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button_6" />

    <Button
        android:id="@+id/button_division"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/_division"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_ln"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/button_tan" />

    <Button
        android:id="@+id/button_sign"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/plus_minus"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_division"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/button_clear" />

    <Button
        android:id="@+id/button_minus"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:text="@string/_minus"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button_3" />

    <Button
        android:id="@+id/button_2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/_2"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_dot"
        app:layout_constraintStart_toEndOf="@+id/button_1" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/_3"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_equals"
        app:layout_constraintStart_toEndOf="@+id/button_2" />

    <Button
        android:id="@+id/button_6"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/_6"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_3"
        app:layout_constraintStart_toEndOf="@+id/button_5" />

    <Button
        android:id="@+id/button_8"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/_8"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_5"
        app:layout_constraintStart_toEndOf="@+id/button_7" />

    <Button
        android:id="@+id/button_4"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:text="@string/_4"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_7"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:text="@string/_7"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_4"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_sin"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:text="@string/sin"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_sqrt"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_cos"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/cos"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_xsquared"
        app:layout_constraintStart_toEndOf="@+id/button_sin" />

    <Button
        android:id="@+id/button_tan"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/tan"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_xtothepower"
        app:layout_constraintStart_toEndOf="@+id/button_cos" />

    <Button
        android:id="@+id/button_ln"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:text="@string/ln"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_log"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button_xtothepower" />

    <Button
        android:id="@+id/button_log"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:text="@string/log"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button_9" />

    <Button
        android:id="@+id/button_xsquared"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/x_squared"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_8"
        app:layout_constraintStart_toEndOf="@+id/button_sqrt" />

    <Button
        android:id="@+id/button_xtothepower"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/x_power_y"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_9"
        app:layout_constraintStart_toEndOf="@+id/button_xsquared" />

    <Button
        android:id="@+id/button_sqrt"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:text="@string/sqrt"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_7"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_9"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/_9"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_6"
        app:layout_constraintStart_toEndOf="@+id/button_8" />

    <Button
        android:id="@+id/button_5"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/_5"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_2"
        app:layout_constraintStart_toEndOf="@+id/button_4" />

    <Button
        android:id="@+id/button_clear"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/_c"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_cos"
        app:layout_constraintStart_toEndOf="@+id/button_back" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:text="@string/_backarrow"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_sin"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/operationSign"
        android:layout_width="33dp"
        android:layout_height="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>