<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@id/myrootlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_1"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/_1"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/button_0"
        app:layout_constraintEnd_toStartOf="@+id/button_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_0"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_marginBottom="80dp"
        android:layout_weight="1"
        android:text="@string/_0"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_dot"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/onScreenValueView"
        android:layout_width="344dp"
        android:layout_height="75dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:freezesText="true"
        android:gravity="end"
        android:textAlignment="textEnd"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088" />

    <Button
        android:id="@+id/button_equals"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_marginBottom="80dp"
        android:text="@string/_equals"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_plus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_dot" />

    <Button
        android:id="@+id/button_dot"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_marginBottom="80dp"
        android:text="@string/_dot"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_equals"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_0" />

    <Button
        android:id="@+id/button_plus"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="80dp"
        android:text="@string/_plus"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_equals" />

    <Button
        android:id="@+id/button_sign"
        android:layout_width="110dp"
        android:layout_height="70dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/plus_minus"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_division"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_clear" />

    <Button
        android:id="@+id/button_x"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/_x"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_6" />

    <Button
        android:id="@+id/button_division"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/_division"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/button_x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_9" />

    <Button
        android:id="@+id/button_minus"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/_minus"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/button_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_3" />

    <Button
        android:id="@+id/button_2"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/_2"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/button_dot"
        app:layout_constraintEnd_toStartOf="@+id/button_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_1" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/_3"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/button_equals"
        app:layout_constraintEnd_toStartOf="@+id/button_minus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_2" />

    <Button
        android:id="@+id/button_6"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/_6"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/button_3"
        app:layout_constraintEnd_toStartOf="@+id/button_x"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_5" />

    <Button
        android:id="@+id/button_8"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/_8"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/button_5"
        app:layout_constraintEnd_toStartOf="@+id/button_9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_7" />

    <Button
        android:id="@+id/button_4"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/_4"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/button_1"
        app:layout_constraintEnd_toStartOf="@+id/button_5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_7"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/_7"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/button_4"
        app:layout_constraintEnd_toStartOf="@+id/button_8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_9"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/_9"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/button_6"
        app:layout_constraintEnd_toStartOf="@+id/button_division"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_8" />

    <Button
        android:id="@+id/button_5"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/_5"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/button_2"
        app:layout_constraintEnd_toStartOf="@+id/button_6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_4" />

    <Button
        android:id="@+id/button_clear"
        android:layout_width="109dp"
        android:layout_height="70dp"
        android:text="@string/_c"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/button_9"
        app:layout_constraintEnd_toStartOf="@+id/button_sign"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_back" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="109dp"
        android:layout_height="70dp"
        android:text="@string/_backarrow"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/button_7"
        app:layout_constraintEnd_toStartOf="@+id/button_clear"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/operationSign"
        android:layout_width="33dp"
        android:layout_height="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:freezesText="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>